# splitting_rep

./: test.py
experiments/: __init__.py  covidlink.py  jobshop.py  running.py
helpers/: compiler.py  output.py  uppaal.py
models/CovidLink/: model.xml
models/CovidLink/code/: CMakeLists.txt  CovidLink.cpp
models/JobShop/: JobShop.xml
models/SIR/: <Untitled>.xml  SIR.xml
models/counter/: model.xml
models/running/: running.xml
